se implementa el cliente feign para la cosulta de productos